bk_ida/gccida/g1/dwarf2out_decl
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_decl/src/dwarf2out.c:12086:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_decl/src/dwarf2out.c:12104:19: error: use of undeclared identifier 'debug_info_level_0'
&& ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_decl/src/obj/dwarf2out.o] Error 1
